// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button text component should render with custom text color 1`] = `
.c0 {
  color: #212240;
  font-family: Avenir Regular,'Avenir Next','Segoe UI', sans-serif;
  font-size: 20px;
  font-weight: bold;
  line-height: 16px;
}

<span
  className="c0"
  color="text"
>
  Lorem ipsum
</span>
`;

exports[`button text component should render with default css properties 1`] = `
.c0 {
  color: #FFFFFF;
  font-family: Avenir Regular,'Avenir Next','Segoe UI', sans-serif;
  font-size: 20px;
  font-weight: bold;
  line-height: 16px;
}

<span
  className="c0"
>
  Lorem ipsum
</span>
`;
